[metadata]
name = moray
version = 0.0.1
author = hirorich
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hirorich/moray
project_urls =
    Bug Tracker = https://github.com/hirorich/moray/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows :: Windows 10

[options]
packages =
    moray
    moray/_browser
    moray/_module
    moray/_module/py
    moray/_module/static
    moray/_server
install_requires =
    bottle-websocket
    requests
    Jinja2
python_requires = >=3.9
